--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ REACT_APP_API_URL=http://localhost:3000
 REACT_APP_STOCK_BASE_PATH=/stocks
 REACT_APP_WATCHLIST_BASE_PATH=/watchlist
 REACT_APP_PORTFOLIO_BASE_PATH=/portfolio
+REACT_APP_USER_BASE_PATH=/user
