fixed chart tooltip

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,4 @@
-PORT=5000
-REACT_APP_API_URL=http://localhost:3000/api
+REACT_APP_API_URL=https://stock-react-t59ries.azurewebsites.net/api
 REACT_APP_STOCK_BASE_PATH=/stocks
 REACT_APP_WATCHLIST_BASE_PATH=/watchlist
 REACT_APP_PORTFOLIO_BASE_PATH=/portfolio
